--- a/css/estilo.css
+++ b/css/estilo.css
@@ -66,14 +66,14 @@ li {
 .hijoFlexUno {
     justify-content: right;
     align-items: flex-end;
-    width: 250px;
+    width: 254px;
     height: auto;
 }
 
 .hijoFlexDos {
     justify-content: right;
     align-items: flex-end;
-    width: 180px;
+    width: 177px;
     height: auto;
 }
 
@@ -98,9 +98,13 @@ li {
 .form {
     display: flex;
     justify-content: center;
-    text-decoration: none;
-    height: 490px;
+    align-items: center;
+    padding: 20px;
+    margin: 20px;
+}
 
+.form-label {
+    margin: 10px;
 }
 
 ul {
@@ -133,16 +137,20 @@ li a {
 
 .stockimgContenedor {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 2fr));
     grid-auto-rows: minmax(240px, auto);
     padding: auto;
     grid-gap: 20px;
+    margin: 10px;
+    justify-content: center;
 }
 
 .stockimg {
-    width: 100%;
+    display: flex;
+    width: 260px;
     height: 100%;
     object-fit: cover;
+
 }
 
 .titulostock {
@@ -208,18 +216,23 @@ nav ul li a:hover {
 }
 
 
-@media (max-width:35px) {
+@media (max-width:375px) {
     .checkbtn {
         display: block;
     }
+
+    .carousel-item {
+        height: 520px;
+    }
+
     .padreFlex {
         display: none;
     }
 
     .medio {
         display: flex;
-        height: 200px;
-        width: 300px;
+        height: auto;
+        width: auto;
         justify-content: center;
     }
 
@@ -301,7 +314,7 @@ nav ul li a:hover {
     color: white;
     background-color: black;
     border: 2px black solid;
-    border-radius: 30px;
+    border-radius: 40px;
     justify-content: center;
     padding: 2px;
     margin: 30px;
@@ -362,4 +375,31 @@ nav ul li a:hover {
 
 .slide img {
     height: 65vh;
+}
+
+.carousel slide {
+    object-fit: cover;
+
+}
+
+.accordion {}
+
+
+.accordion-header {
+    text-align: center;
+}
+
+.accordion-body {
+    text-align: center;
+    font-size: 20px;
+}
+
+.precioStock {
+    display: flex;
+    justify-content: center;
+}
+
+.card-text {
+    display: flex;
+    justify-content: center;
 }
