--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,405 +1,292 @@
 * {
-    margin: 10px padding 10px;
+  margin: 10px padding 10px; }
 
-
-
-}
-
-html,
-body {
-    min-height: 100%;
-}
+html {
+  min-height: 100%; }
 
 body {
-    background-image: linear-gradient(to top, #642B73, #C6426E);
-    list-style: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 120%;
-}
+  min-height: 100%;
+  background-image: linear-gradient(to top, #642B73, #C6426E);
+  list-style: none;
+  font-family: linear-gradient(to top, #642B73, #C6426E);
+  height: 120%; }
 
 main {
-    display: block;
-    flex-direction: column;
-}
-
+  display: block;
+  flex-direction: column; }
 
 .imgPrincipal {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    justify-content: center;
-}
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  justify-content: center; }
 
 .navBackground {
-    list-style: none;
-}
+  list-style: none; }
 
 .nav {
-    text-decoration: none;
-}
-
-
+  text-decoration: none; }
 
 li {
-
-    display: inline-block;
-}
-
-
+  display: inline-block; }
 
 .padreFlex {
+  display: flex;
+  width: auto;
+  height: 30vh;
+  margin-bottom: auto;
+  justify-items: end;
+  justify-content: space-evenly;
+  align-items: flex-end; }
+
+.hijoFlex {
+  justify-content: right;
+  align-items: flex-end;
+  width: 190px; }
+
+.hijoFlexUno {
+  justify-content: right;
+  align-items: flex-end;
+  width: 254px;
+  height: auto; }
+
+.hijoFlexDos {
+  justify-content: right;
+  align-items: flex-end;
+  width: 177px;
+  height: auto; }
+
+.headerform {
+  display: flex;
+  justify-content: center;
+  display: contents;
+  border-radius: 30px;
+  list-style: circle;
+  text-decoration: none;
+  flex-direction: column; }
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin: 20px; }
+
+.form-label {
+  margin: 10px; }
+
+ul {
+  display: flex;
+  justify-content: left;
+  justify-content: space-around; }
+
+li a {
+  text-decoration: none; }
+
+.mainubi {
+  background-color: #C6A9AB;
+  list-style: none;
+  margin: 10px auto;
+  display: block;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.navubi {
+  text-align: center; }
+
+.titulostock {
+  position: relative;
+  display: flex;
+  justify-content: center; }
+
+.stockimgContenedor {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 2fr));
+  grid-auto-rows: minmax(240px, auto);
+  padding: auto;
+  grid-gap: 20px;
+  margin: 10px;
+  justify-content: center; }
+
+.stockimg {
+  display: flex;
+  width: 260px;
+  height: 100%;
+  object-fit: cover; }
+
+.titulostock {
+  justify-content: center; }
+
+.tiendaDeRopa {
+  display: flex;
+  justify-content: center; }
+
+.navPreguntas {
+  padding: 20px;
+  margin: auto;
+  text-align: center;
+  font-size: x-large; }
+
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100; }
+  .float:hover {
+    text-decoration: none;
+    color: #25d366;
+    background-color: #fff; }
+
+.myFloat {
+  margin-top: 16px; }
+
+nav ul li a {
+  font-size: 18px;
+  color: black; }
+  nav ul li a:hover {
+    color: #3c1053; }
+
+.menuIcon {
+  display: none; }
+  .menuIcon img {
+    width: 30px;
+    height: 30px;
+    border-radius: 2px; }
+
+#check {
+  display: none; }
+
+@media (max-width: 375px) {
+  .checkbtn {
+    display: block; }
+  .carousel-item {
+    height: 520px; }
+  .padreFlex {
+    display: none; }
+  .medio {
     display: flex;
+    height: auto;
     width: auto;
-    height: 30vh;
+    justify-content: center; }
+    .medio ul li {
+      font-size: medium;
+      justify-content: space-between;
+      gap: 20px; }
+  .padreFlex {
+    height: 1009px;
+    width: 30%;
+    justify-content: center;
+    top: 20px; }
+  .contenedor {
+    height: 20%; }
+  .hijoFlexCuatro {
+    display: none; }
+  .listas {
+    flex-grow: 1; } }
+
+@media (max-width: 375px) and (max-width: 1280) {
+  .padreFlex {
+    display: flex;
+    width: 1000px;
+    height: 60px;
     margin-bottom: auto;
     justify-items: end;
     justify-content: space-evenly;
-    align-items: flex-end;
-}
+    align-items: flex-end; } }
 
-.hijoFlex {
-    justify-content: right;
-    align-items: flex-end;
-    width: 190px;
-}
-
-.hijoFlexUno {
-    justify-content: right;
-    align-items: flex-end;
-    width: 254px;
-    height: auto;
-}
-
-.hijoFlexDos {
-    justify-content: right;
-    align-items: flex-end;
-    width: 177px;
-    height: auto;
-}
-
-
-.colorFooter {
-    /* background-color: none;
-    align-items: flex-end;
-    margin-top: 10%; */
-}
-
-.headerform {
-    display: flex;
-    justify-content: center;
-    display: contents;
-    border-radius: 30px;
-    list-style: circle;
-    text-decoration: none;
-    flex-direction: column;
-
-}
-
-.form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    margin: 20px;
-}
-
-.form-label {
-    margin: 10px;
-}
-
-ul {
-    display: flex;
-    justify-content: left;
-    justify-content: space-around;
-}
-
-li a {
-    text-decoration: none;
-}
-
-.mainubi {
-    background-color: #C6A9AB;
-    list-style: none;
-    margin: 10px auto;
-    display: block;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.navubi {
-    text-align: center;
-}
-
-.titulostock {
-    position: relative;
-    display: flex;
-    justify-content: center;
-}
-
-.stockimgContenedor {
+@media (max-width: 375px) {
+  /*  GRIDS */
+  .gridContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 2fr));
-    grid-auto-rows: minmax(240px, auto);
-    padding: auto;
-    grid-gap: 20px;
-    margin: 10px;
+    grid-template-columns: auto auto auto;
     justify-content: center;
-}
-
-.stockimg {
-    display: flex;
-    width: 260px;
-    height: 100%;
-    object-fit: cover;
-
-}
-
-.titulostock {
+    gap: 30px; }
+  .gridNav {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     justify-content: center;
-}
-
-.tiendaDeRopa {
-    display: flex;
+    justify-content: space-between;
+    gap: 30px; }
+  .listas {
+    grid-column: 2 / 4; }
+  .contenedor {
+    display: grid;
+    grid-template-columns: auto auto auto;
     justify-content: center;
-}
-
-.navPreguntas {
-    padding: 20px;
-    margin: auto;
-    text-align: center;
-    font-size: x-large;
-}
-
-.float {
-    position: fixed;
-    width: 60px;
-    height: 60px;
-    bottom: 40px;
-    right: 40px;
-    background-color: #25d366;
-    color: #FFF;
-    border-radius: 50px;
-    text-align: center;
-    font-size: 30px;
-    box-shadow: 2px 2px 3px #999;
-    z-index: 100;
-}
-
-.float:hover {
-    text-decoration: none;
-    color: #25d366;
-    background-color: #fff;
-}
-
-.myFloat {
-    margin-top: 16px;
-}
-
-
-nav ul li a {
-    font-size: 18px;
-    color: black;
-}
-
-nav ul li a:hover {
-    color: #3c1053;
-}
-
-.menuIcon img {
-    width: 30px;
-    height: 30px;
-    border-radius: 2px;
-}
-
-.menuIcon,
-#check {
-    display: none;
-}
-
-
-@media (max-width:375px) {
-    .checkbtn {
-        display: block;
-    }
-
-    .carousel-item {
-        height: 520px;
-    }
-
-    .padreFlex {
-        display: none;
-    }
-
-    .medio {
-        display: flex;
-        height: auto;
-        width: auto;
-        justify-content: center;
-    }
-
-    .medio ul li {
-        font-size: medium;
-        justify-content: space-between;
-        gap: 20px;
-    }
-
-
-    @media (max-width:768px) {}
-
-    .padreFlex {
-        height: 1009px;
-        width: 30%;
-        justify-content: center;
-        top: 20px;
-    }
-
-    .contenedor {
-        height: 20%;
-    }
-
-    .hijoFlexCuatro {
-        display: none;
-    }
-
-    .listas {
-        flex-grow: 1;
-    }
-
-    @media (max-width:1280) {
-        .padreFlex {
-            display: flex;
-            width: 1000px;
-            height: 60px;
-            margin-bottom: auto;
-            justify-items: end;
-            justify-content: space-evenly;
-            align-items: flex-end;
-        }
-    }
-
-    /*  GRIDS */
-
-    .gridContainer {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        justify-content: center;
-        gap: 30px;
-    }
-
-    .gridNav {
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        justify-content: center;
-        justify-content: space-between;
-        gap: 30px;
-    }
-
-    .listas {
-        grid-column: 2 / 4;
-    }
-
-    .contenedor {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        justify-content: center;
-        gap: 30px;
-    }
-
-    .contenedor {
-        grid-column: 1 / 4;
-    }
-}
+    gap: 30px;
+    grid-column: 1 / 4; } }
 
 .medio {
-    font-size: 100%;
-    color: white;
-    background-color: black;
-    border: 2px black solid;
-    border-radius: 40px;
-    justify-content: center;
-    padding: 2px;
-    margin: 30px;
-}
-
-.medio ul {
+  font-size: 100%;
+  color: white;
+  background-color: black;
+  border: 2px black solid;
+  border-radius: 40px;
+  justify-content: center;
+  padding: 2px;
+  margin: 30px; }
+  .medio ul {
     padding: 20px;
     display: flex;
     justify-content: center;
-    justify-content: space-evenly;
-}
+    justify-content: space-evenly; }
 
 /* ANIMACIONES */
-
 .tiendaDeRopa {
-    background-color: none;
-    animation-duration: 3s;
-}
+  background-color: none;
+  animation-duration: 3s; }
 
 .inicio:hover {
-    background-color: #642B73;
-    height: 25px;
-    width: 10%;
-    border-radius: 20px;
-    text-decoration: none;
-}
+  background-color: #642B73;
+  height: 25px;
+  width: 10%;
+  border-radius: 20px;
+  text-decoration: none; }
 
 .stock:hover {
-    background-color: #642B73;
-    height: 25px;
-    border-radius: 20px;
-}
+  background-color: #642B73;
+  height: 25px;
+  border-radius: 20px; }
 
 .contacto:hover {
-    background-color: #642B73;
-    height: 25px;
-    border-radius: 30px;
-}
+  background-color: #642B73;
+  height: 25px;
+  border-radius: 30px; }
 
 .ubicacion:hover {
-    background-color: #642B73;
-    height: 25px;
-    border-radius: 20px;
-}
+  background-color: #642B73;
+  height: 25px;
+  border-radius: 20px; }
 
 .preguntas:hover {
-    background-color: #642B73;
-    height: 20px;
-    width: auto;
-    border-radius: 20px;
-}
-
+  background-color: #642B73;
+  height: 20px;
+  width: auto;
+  border-radius: 20px; }
 
 .slide {
-    margin-top: 10px;
-
-}
-
-.slide img {
-    height: 65vh;
-}
+  margin-top: 10px; }
+  .slide img {
+    height: 65vh; }
 
 .carousel slide {
-    object-fit: cover;
-
-}
-
-.accordion {}
-
+  object-fit: cover; }
 
 .accordion-header {
-    text-align: center;
-}
+  text-align: center; }
 
 .accordion-body {
-    text-align: center;
-    font-size: 20px;
-}
+  text-align: center;
+  font-size: 20px; }
 
-.precioStock {
-    display: flex;
-    justify-content: center;
-}
-
+.precioStock,
 .card-text {
-    display: flex;
-    justify-content: center;
-}
+  display: flex;
+  justify-content: center; }
