--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,26 @@
 html {
   min-height: 100%; }
 
+/* MAPS */
+.card-text {
+  display: flex;
+  justify-content: center; }
+
+.precioStock {
+  display: flex;
+  justify-content: center; }
+
+.anuncios {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1rem;
+  color: white;
+  background-color: black;
+  border: 2px black solid;
+  border-radius: 40px;
+  justify-content: center;
+  padding: 2px;
+  margin: 30px; }
+
 body {
   min-height: 100%;
   background-image: linear-gradient(to top, #642B73, #C6426E);
@@ -29,32 +49,6 @@ main {
 
 li {
   display: inline-block; }
-
-.padreFlex {
-  display: flex;
-  width: auto;
-  height: 30vh;
-  margin-bottom: auto;
-  justify-items: end;
-  justify-content: space-evenly;
-  align-items: flex-end; }
-
-.hijoFlex {
-  justify-content: right;
-  align-items: flex-end;
-  width: 190px; }
-
-.hijoFlexUno {
-  justify-content: right;
-  align-items: flex-end;
-  width: 254px;
-  height: auto; }
-
-.hijoFlexDos {
-  justify-content: right;
-  align-items: flex-end;
-  width: 177px;
-  height: auto; }
 
 .headerform {
   display: flex;
@@ -285,8 +279,3 @@ nav ul li a {
 .accordion-body {
   text-align: center;
   font-size: 20px; }
-
-.precioStock,
-.card-text {
-  display: flex;
-  justify-content: center; }
