--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,12 +1,13 @@
 * {
     margin: 10px padding 10px;
 }
-
 html {
     min-height: 100%;
 }
 
 @import "variables";
+@import "maps";
+@import "mixin";
 
 body {
     min-height: 100%;
@@ -15,7 +16,6 @@ body {
     font-family: $fontfamily;
     height: 120%;
 }
-
 main {
     display: block;
     flex-direction: column;
@@ -39,37 +39,6 @@ main {
 li {
     display: inline-block;
 }
-
-.padreFlex {
-    display: flex;
-    width: auto;
-    height: 30vh;
-    margin-bottom: auto;
-    justify-items: end;
-    justify-content: space-evenly;
-    align-items: flex-end;
-}
-
-.hijoFlex {
-    justify-content: right;
-    align-items: flex-end;
-    width: 190px;
-}
-
-.hijoFlexUno {
-    justify-content: right;
-    align-items: flex-end;
-    width: 254px;
-    height: auto;
-}
-
-.hijoFlexDos {
-    justify-content: right;
-    align-items: flex-end;
-    width: 177px;
-    height: auto;
-}
-
 .headerform {
     display: flex;
     justify-content: center;
@@ -367,10 +336,4 @@ nav ul li a {
 .accordion-body {
     text-align: center;
     font-size: 20px;
-}
-
-.precioStock,
-.card-text {
-    display: flex;
-    justify-content: center;
 }
