--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,22 +1,17 @@
 * {
-  margin: 10px padding 10px;
-}
+  margin: 10px padding 10px; }
 
 html {
-  min-height: 100%;
-}
+  min-height: 100%; }
 
 /* MAPS */
-.card-text,
-.precioStock {
+.card-text, .precioStock {
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .precioStock {
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .anuncios {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -27,51 +22,41 @@ html {
   border-radius: 40px;
   justify-content: center;
   padding: 2px;
-  margin: 30px;
-}
+  margin: 30px; }
 
-.card-text,
-.precioStock {
+.card-text, .precioStock {
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .precioStock {
   color: #FCCCDE;
-  background-color: #DB6B96;
-}
+  background-color: #DB6B96; }
 
 body {
   min-height: 100%;
   background-image: linear-gradient(to top, #642B73, #C6426E);
   list-style: none;
   font-family: linear-gradient(to top, #642B73, #C6426E);
-  height: 120%;
-}
+  height: 120%; }
 
 main {
   display: block;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 .imgPrincipal {
   height: 100%;
   width: 100%;
   object-fit: cover;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .navBackground {
-  list-style: none;
-}
+  list-style: none; }
 
 .nav {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 li {
-  display: inline-block;
-}
+  display: inline-block; }
 
 .headerform {
   display: flex;
@@ -80,48 +65,40 @@ li {
   border-radius: 30px;
   list-style: circle;
   text-decoration: none;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 .form {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px;
-  margin: 20px;
-}
+  margin: 20px; }
 
 .form-label {
-  margin: 10px;
-}
+  margin: 10px; }
 
 ul {
   display: flex;
   justify-content: left;
-  justify-content: space-around;
-}
+  justify-content: space-around; }
 
 li a {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .mainubi {
   background-color: #C6A9AB;
   list-style: none;
   margin: 10px auto;
   display: block;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
 
 .navubi {
-  text-align: center;
-}
+  text-align: center; }
 
 .titulostock {
   position: relative;
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .stockimgContenedor {
   display: grid;
@@ -130,32 +107,26 @@ li a {
   padding: auto;
   grid-gap: 20px;
   margin: 10px;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .stockimg {
   display: flex;
   width: 260px;
   height: 100%;
-  object-fit: cover;
-}
+  object-fit: cover; }
 
 .titulostock {
-  justify-content: center;
-}
+  justify-content: center; }
 
 .tiendaDeRopa {
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  justify-content: center; }
 
 .navPreguntas {
   padding: 20px;
   margin: auto;
   text-align: center;
-  font-size: x-large;
-}
+  font-size: x-large; }
 
 .float {
   position: fixed;
@@ -169,87 +140,58 @@ li a {
   text-align: center;
   font-size: 30px;
   box-shadow: 2px 2px 3px #999;
-  z-index: 100;
-}
-
-.float:hover {
-  text-decoration: none;
-  color: #25d366;
-  background-color: #fff;
-}
+  z-index: 100; }
+  .float:hover {
+    text-decoration: none;
+    color: #25d366;
+    background-color: #fff; }
 
 .myFloat {
-  margin-top: 16px;
-}
+  margin-top: 16px; }
 
 nav ul li a {
   font-size: 18px;
-  color: black;
-}
-
-nav ul li a:hover {
-  color: #3c1053;
-}
+  color: black; }
+  nav ul li a:hover {
+    color: #3c1053; }
 
 .menuIcon {
-  display: none;
-}
-
-.menuIcon img {
-  width: 30px;
-  height: 30px;
-  border-radius: 2px;
-}
+  display: none; }
+  .menuIcon img {
+    width: 30px;
+    height: 30px;
+    border-radius: 2px; }
 
 #check {
-  display: none;
-}
+  display: none; }
 
 @media (max-width: 375px) {
   .checkbtn {
-    display: block;
-  }
-
+    display: block; }
   .carousel-item {
-    height: 520px;
-  }
-
+    height: 520px; }
   .padreFlex {
-    display: none;
-  }
-
+    display: none; }
   .medio {
     display: flex;
     height: auto;
     width: auto;
-    justify-content: center;
-  }
-
-  .medio ul li {
-    font-size: medium;
-    justify-content: space-between;
-    gap: 20px;
-  }
-
+    justify-content: center; }
+    .medio ul li {
+      font-size: medium;
+      justify-content: space-between;
+      gap: 20px; }
   .padreFlex {
     height: 1009px;
     width: 30%;
     justify-content: center;
-    top: 20px;
-  }
-
+    top: 20px; }
   .contenedor {
-    height: 20%;
-  }
-
+    height: 20%; }
   .hijoFlexCuatro {
-    display: none;
-  }
-
+    display: none; }
   .listas {
-    flex-grow: 1;
-  }
-}
+    flex-grow: 1; } }
 
 @media (max-width: 375px) and (max-width: 1280) {
   .padreFlex {
@@ -259,40 +201,29 @@ nav ul li a:hover {
     margin-bottom: auto;
     justify-items: end;
     justify-content: space-evenly;
-    align-items: flex-end;
-  }
-}
+    align-items: flex-end; } }
 
 @media (max-width: 375px) {
-
   /*  GRIDS */
   .gridContainer {
     display: grid;
     grid-template-columns: auto auto auto;
     justify-content: center;
-    gap: 30px;
-  }
-
+    gap: 30px; }
   .gridNav {
     display: grid;
     grid-template-columns: auto auto auto auto;
     justify-content: center;
     justify-content: space-between;
-    gap: 30px;
-  }
-
+    gap: 30px; }
   .listas {
-    grid-column: 2 / 4;
-  }
-
+    grid-column: 2 / 4; }
   .contenedor {
     display: grid;
     grid-template-columns: auto auto auto;
     justify-content: center;
     gap: 30px;
-    grid-column: 1 / 4;
-  }
-}
+    grid-column: 1 / 4; } }
 
 .medio {
   font-size: 100%;
@@ -302,72 +233,57 @@ nav ul li a:hover {
   border-radius: 40px;
   justify-content: center;
   padding: 2px;
-  margin: 30px;
-}
-
-.medio ul {
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  justify-content: space-evenly;
-}
+  margin: 30px; }
+  .medio ul {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly; }
 
 /* ANIMACIONES */
 .tiendaDeRopa {
   background-color: none;
-  animation-duration: 3s;
-}
+  animation-duration: 3s; }
 
 .inicio:hover {
   background-color: #642B73;
   height: 25px;
   width: 10%;
   border-radius: 20px;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .stock:hover {
   background-color: #642B73;
   height: 25px;
-  border-radius: 20px;
-}
+  border-radius: 20px; }
 
 .contacto:hover {
   background-color: #642B73;
   height: 25px;
-  border-radius: 30px;
-}
+  border-radius: 30px; }
 
 .ubicacion:hover {
   background-color: #642B73;
   height: 25px;
-  border-radius: 20px;
-}
+  border-radius: 20px; }
 
 .preguntas:hover {
   background-color: #642B73;
   height: 20px;
   width: auto;
-  border-radius: 20px;
-}
+  border-radius: 20px; }
 
 .slide {
-  margin-top: 10px;
-}
-
-.slide img {
-  height: 65vh;
-}
+  margin-top: 10px; }
+  .slide img {
+    height: 65vh; }
 
 .carousel slide {
-  object-fit: cover;
-}
+  object-fit: cover; }
 
 .accordion-header {
-  text-align: center;
-}
+  text-align: center; }
 
 .accordion-body {
   text-align: center;
-  font-size: 20px;
-}
+  font-size: 20px; }
