--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,34 +4,6 @@
 html {
   min-height: 100%; }
 
-/* MAPS */
-.card-text, .precioStock {
-  display: flex;
-  justify-content: center; }
-
-.precioStock {
-  display: flex;
-  justify-content: center; }
-
-.anuncios {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 1rem;
-  color: white;
-  background-color: black;
-  border: 2px black solid;
-  border-radius: 40px;
-  justify-content: center;
-  padding: 2px;
-  margin: 30px; }
-
-.card-text, .precioStock {
-  display: flex;
-  justify-content: center; }
-
-.precioStock {
-  color: #FCCCDE;
-  background-color: #DB6B96; }
-
 body {
   min-height: 100%;
   background-image: linear-gradient(to top, #642B73, #C6426E);
@@ -103,17 +75,18 @@ li a {
 .stockimgContenedor {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 2fr));
-  grid-auto-rows: minmax(240px, auto);
+  grid-auto-rows: minmax(235px, auto);
   padding: auto;
   grid-gap: 20px;
-  margin: 10px;
+  margin: 12px;
   justify-content: center; }
 
 .stockimg {
   display: flex;
-  width: 260px;
+  width: 230px;
   height: 100%;
-  object-fit: cover; }
+  object-fit: cover;
+  justify-content: center; }
 
 .titulostock {
   justify-content: center; }
@@ -287,3 +260,31 @@ nav ul li a {
 .accordion-body {
   text-align: center;
   font-size: 20px; }
+
+/* MAPS */
+.card-text, .precioStock {
+  display: flex;
+  justify-content: center; }
+
+.precioStock {
+  display: flex;
+  justify-content: center; }
+
+.anuncios {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1rem;
+  color: white;
+  background-color: black;
+  border: 2px black solid;
+  border-radius: 40px;
+  justify-content: center;
+  padding: 2px;
+  margin: 30px; }
+
+.card-text, .precioStock {
+  display: flex;
+  justify-content: center; }
+
+.precioStock {
+  color: #FCCCDE;
+  background-color: #DB6B96; }
