--- a/css/estilo.css
+++ b/css/estilo.css
@@ -260,7 +260,7 @@ nav ul li a:hover {
   }
 
   .anuncios ul {
-    font-size: 14px;
+    font-size: 2px;
   }
 
   title {
@@ -343,7 +343,7 @@ nav ul li a:hover {
 
 .anuncios {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 1rem;
+  font-size: 90%;
   color: white;
   background-color: black;
   border: 2px black solid;
